--- a/src/style.css
+++ b/src/style.css
@@ -13,27 +13,30 @@
     --primary-color: #FF3147;
     --secondary-color: #000000;
     --text-color: #FFFFFF;
+    --background-color: #F6F6F6;
 
     --primary-heading-font: normal normal 600 30px Cormorant SC,sans-serif;
-    --heading-font: normal normal bold 60px Cormorant SC,sans-serif;
-    --paragraph-font: normal normal normal 1rem Poppins,sans-serif;
+    --heading-font: normal normal bold max(3.125vw, 2rem) Cormorant SC,sans-serif;
+
+    --paragraph-font: normal normal normal 1rem Poppins,sans-serif; /* regular */
     --button-font: normal normal 600 14px Poppins;
 
     
     --primary-sub-heading-font:normal normal 600 24px Cormorant SC;
-    --sub-heading-font:normal normal bold 45px Cormorant SC;
+    --sub-heading-font:normal normal bold max(1.5rem, 2.35vw) Cormorant SC;
+    user-select: none;
 }
 /* -----------GENERAL STYLES----------- */
 * + *{
-    margin-top: 1.5rem !important;
+    margin-top: 1em !important;
 }
 div,body,section,label{
     margin-top: 0 !important;
 }
-h1,h2,h3,h4,h5{
+h1,h2,h4,h5{
     text-transform: uppercase; 
 }
-h1,h2{
+h1,h2,h3{
     color: var(--secondary-color)
 }
 h4,h5{
@@ -45,11 +48,17 @@ h1{
 h2{
     font: var(--sub-heading-font)  
 }
+h3{
+    font: normal normal 500 20px Poppins;  /*medium */
+}
 h4{
     font: var(--primary-heading-font);
 }
 h5{
     font: var(--primary-sub-heading-font)
+}
+h6{
+font: normal normal 300 60px Poppins;
 }
 p{
     font: var(--paragraph-font)
@@ -66,12 +75,11 @@ button.btn:hover{
 }
 
 main{
-    margin-left: 19.5%;
     max-width: 100vw;
 }
 section{
-  padding: 100px 0;
- 
+  padding: 100px 0 100px 19.5%;
+min-height: 100vh;   
  
 }
 
@@ -84,16 +92,19 @@ section{
 
 
 
-/*-------------- WHAT WE DO SECTION START------------- */
+/*-------------- WHAT WE DO SECTION------------- */
 
+.what-we-do{
+    background-color: var(--background-color);
+}
 .what-we-do .header,.para{
     width: min(100%,  clamp(400px,40%,700px));
 }
- /* CAROUSEL */
+ /* -------------------CAROUSEL --------------*/
 
  .carousel-indicators{
      position: relative;
-     justify-content: start;
+     justify-content:start;
  }
  .carousel-indicators [data-mdb-target]{
      margin-top: 0!important;
@@ -113,13 +124,20 @@ section{
  padding: 5rem 3rem;
  text-align: center;
  opacity: .5;
- transition: opacity .5s ease;
+ transition: opacity .8s ease;
  }
  .carousel-item .row .web-development:hover{
     opacity: 1;
  }
  .carousel-item .row>div>img{
     height: max(30vw,80vh);
+ }
+ @media screen and (max-width:900px){
+    .carousel-item .row .web-development,.carousel-item .row>div>img{
+            height: 300px;
+           
+            
+         }
  }
  .carousel-item .row .web-development>.white {
      color: var(--text-color);
@@ -147,12 +165,129 @@ section{
 
 /*-------------- WHAT WE DO SECTION END------------- */
 
+/* --------------FEATURES SECTION----------- */
+.features{
+    padding:100px 10.5%;
+}
+.features img{
+    width: 60px;
+    height: 60px;
+}
+/* --------------FEATURES SECTION END----------- */
+
+/*------------ OUR PROJECT SECTION --------*/
+.our-project{
+    padding:100px 10.5%;
+}
+.our-project-container .container .clickable{
+    cursor: pointer; 
+}
+.our-project-container{
+    gap: 1rem;
+}
+.our-project-container .container{
+    min-width: 30vw;
+    flex-basis: 30vw;
+    
+}
+.our-project-container div div{
+    background-color: var(--background-color)
+}
+.our-project-container img{
+    height: 100%;
+    object-fit: cover;
+    aspect-ratio: 3/2;
+}
+
+.our-project-container div div.primary{
+    background-color: var(--primary-color);
+}
+.our-project-container div>p{
+    color: var(--secondary-color) ;
+}
+.our-project-container .primary>h3,.primary>p{
+    color: var(--text-color) !important;
+}
+/*------------ OUR PROJECT SECTION END --------*/
+
+/* ------------COMPANY GROWTH SECTION- --------- */
+.our-growth{
+    background-color: var(--background-color);
+    padding:100px 10.5%;
+    min-height: fit-content;
+}
+.our-growth .text{
+    font-size: 20px;
+}
+.our-growth .growth-card{
+    background-color:#fff;
+    min-width: 23%;
+    border-radius: 2px;
+}
+
+.our-growth .growth-card:hover{
+    box-shadow: 3px 6px 20px #672C2C1F;
+}
+/*------------COMPANY GROWTH SECTION END------------  */
+
+/*----------------- FEEDBACK SECTION-------------------- */
+.feedback{
+
+    padding:100px 28.5%;
+    min-height: fit-content;
+}
+@media screen and (max-width:660px){
+    .feedback{
+        padding: 100px 2rem;
+    }
+}
+.feedback .blockquote-quoted::before{
+ content:  url('./icons/Quotemarks-left.svg');
+ color:#aacce9;
+ font-size: 150px;
+ display: block;
+ margin-top: -90px;
+ margin-bottom: -100px;
+ margin-left: -25px;
+}
+.feedback blockquote footer cite{
+    font-style: normal;
+    font: normal normal bold 20px Poppins;
+    color: var(--primary-color);
+}
+.feedback blockquote footer cite span{
+  font-weight: 300;
+}
+/*----------------- FEEDBACK SECTION END-------------------- */
+
+/* -------------------FOOTER SECTION ------------------ */
+footer.footer{
+    background-color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:22.5vw;
+}
 
 /*--------------- MODAL WINDOW----------- */
-.form-check-input[type=checkbox]{
+ .contact-us .form-check-input[type=checkbox]{
     border-color: var(--primary-color)!important;
 }
-.form-check-input[type=checkbox]:checked{
+.contact-us .form-check-input[type=checkbox]:checked{
     background-color: var(--primary-color)!important;
     
+}
+.contact-us .modal-body h6{
+    font-size: 20px;
+    font-weight: bold;
+}
+.contact-us .modal-content{
+    border: 1px solid #F1F1F1;
+}
+.contact-us input{
+    font-weight: bold;
+}
+.form-control.is-invalid, .was-validated .form-control{
+    margin-bottom: 0 !important;
+   
 }
