--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ main{
     max-width: 100vw;
 }
 section{
-  padding: 100px 0 100px 19.5%;
+  padding: 100px 10.5% 100px ;
 min-height: 100vh;   
  
 }
